Refine skyblock core runtime helpers